@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <strings>
-    <string id="30000">firedrive</string>
+    <string id="30000">SockShare</string>
     <string id="30001">Username</string>
     <string id="30002">Password</string>
-    <string id="30003">Authorization Key [OPTIONAL]</string>
+    <string id="30003">[[ Click to Clear Authorization Key ]]</string>
 	<string id="30004">User Agent</string>
     <string id="30006">Playback Type</string>
     <string id="30005">Save Authorization Key</string>
-    <string id="30007">Always Prompt for Quality / Format Playback</string>
     <string id="30008">Login</string>
     <string id="30009">Playback</string>
     <string id="30010">Login Type</string>
-    <string id="30011">Preferred Quality</string>
-    <string id="30012">Preferred Format</string>
-    <string id="30013">Avoid Quality</string>
-    <string id="30014">Avoid Format</string>
+    <string id="30011">You must solve the captcha to login.</string>
+    <string id="30012">Captcha Login: Enter the characters above</string>
+    <string id="30014">Authoirization key cleared</string>
     <string id="30015">Set the Username and Password in addon settings before running.</string>
     <string id="30016">You must add org.python.pydev.debug.pysrc to your PYTHONPATH.</string>
     <string id="30017">Login information is incorrect or permission is denied</string>
