@@ -2,7 +2,8 @@
 <settings>
    	<setting id="username" type="text" label="30001" default="" />
 	<setting id="password" type="text" label="30002" option="hidden" default="" />
-  	<setting id="user_agent" type="text" label="30004" default="Mozilla/4.0 (compatible; MSIE 5.5; Windows NT)" />
   	<setting id="save_auth_token" type="bool" label="30005" default="true" />
+	<setting id="clear_auth" type="action" label="30003" action="RunScript($CWD/default.py,clearauth)"/>
+  	<setting id="user_agent" type="text" label="30004" default="Mozilla/4.0 (compatible; MSIE 5.5; Windows NT)" />
    	<setting id="playback_type" type="enum" label="30006" values="Memory Cache|Disk Cache|Stream" default="2"/>
 </settings>
