@@ -1,5 +1,6 @@
-
 Version 0.0.2.x
 - support for public URLS [invoke w/ plugin://plugin.video.sockshare/?mode=streamURL&amp;url=http://www.sockshare.com/file/#####]
+- added MemoryCache type
+- fix login captcha
 Version 0.0.1.x
 - Initial version
